--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="content-disposition" content="inline; filename='NIMISH JAIN - RESUME.pdf'">
-    
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
-    <link rel="manifest" href="./assets/site.webmanifest">
 
-    <title>Nimish's Resume</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-      <div class="container">
-        <h1 class="heading">Nimish's Resume</h1>
-        <div class="buttons">
-            <a href="./NIMISH JAIN - RESUME.pdf">View</a>
-            <a href="./NIMISH JAIN - RESUME.pdf" download>Download</a>
-        </div>
-      </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="content-disposition" content="inline; filename='NIMISH JAIN - RESUME.pdf'">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+  <link rel="manifest" href="./assets/site.webmanifest">
+
+  <title>Nimish's Resume</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1 class="heading">Redirecting...</h1>
+    <!-- <div class="buttons">
+      <a href="https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing">View</a>
+      <a href="https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing" download>Download</a>
+    </div> -->
+  </div>
+</body>
+<script>
+  window.location.href = "https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing"
+</script>
+
 </html>
