feat: Redirect using html

--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
 
   <title>Nimish's Resume</title>
   <link rel="stylesheet" href="./style.css">
+  <meta http-equiv="refresh"
+    content="2; url = https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing" />
 </head>
 
 <body>
   <div class="container">
     <h1 class="heading">Redirecting...</h1>
-    <!-- <div class="buttons">
-      <a href="https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing">View</a>
-      <a href="https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing" download>Download</a>
-    </div> -->
+    <div class="buttons">
+      <h2>If it does not redirect</h2>
+      <a href="https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing">Click here</a>
+    </div>
   </div>
 </body>
-<script>
-  window.location.href = "https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing"
-</script>
 
 </html>
