fix: Added raw drive link for resume

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Nimish's Resume</title>
   <link rel="stylesheet" href="./style.css">
   <meta http-equiv="refresh"
-    content="2; url = https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing" />
+    content="2; url = https://drive.google.com/uc?export=view&id=1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <h1 class="heading">Redirecting...</h1>
     <div class="buttons">
       <h2>If it does not redirect</h2>
-      <a href="https://drive.google.com/file/d/1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF/view?usp=sharing">Click here</a>
+      <a href="https://drive.google.com/uc?export=view&id=1Tg31PggA8KJE4EIhHue5fIBz3qskzfgF">Click here</a>
     </div>
   </div>
 </body>
